Fix build with bisect_ppx.2.6.0
Signed-off-by: Edwin Török <edvin.torok@citrix.com>

--- a/src/dune
+++ b/src/dune
@@ -1,3 +1,4 @@
 (executable
   (name summary)
-  (libraries unix bisect_ppx))
+  (public_name bisect-summary)
+  (libraries unix bisect_ppx.common))
